--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/e0dc62ea01.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Shopping List</title>
   </head>
   <body>
@@ -27,6 +31,7 @@
                 </form>
               </div>
             </div>
+
             <div class="card-action">
               <h5 id="list-title">List</h5>
               <div class="input-field col s12">
@@ -34,7 +39,7 @@
                 <label for="filter">Filter Items</label>
               </div>
               <ul class="collection"></ul>
-              <a href="#" class="clear-tasks btn black">Clear Items</a>
+              <a href="#" class="clear-items btn black">Clear Items</a>
             </div>
           </div>
         </div>
